[gd_scene load_steps=22 format=3 uid="uid://bku1qamdfbt5l"]

[ext_resource type="Script" path="res://Scripts/level1.gd" id="1_43fiv"]
[ext_resource type="Texture2D" uid="uid://dojfgmwgvwjuw" path="res://Assets/Environment/ground_tiles.png" id="2_eo0mo"]
[ext_resource type="Texture2D" uid="uid://c6f7puww6d8s4" path="res://Assets/Environment/obstacle_tiles.png" id="3_p3w3u"]
[ext_resource type="Texture2D" uid="uid://hcrrwijh5v0s" path="res://Assets/Obstacles/crate.png" id="4_nkb85"]
[ext_resource type="Texture2D" uid="uid://cmmahegn824yw" path="res://Assets/Obstacles/walls.png" id="5_4mihm"]
[ext_resource type="PackedScene" uid="uid://3thp8fg2bjjd" path="res://Scenes/player.tscn" id="6_r35vq"]
[ext_resource type="PackedScene" uid="uid://wbqscbb8q11k" path="res://Scenes/alpha.tscn" id="7_1ieat"]
[ext_resource type="PackedScene" uid="uid://bn6xvb84oix27" path="res://Scenes/beta.tscn" id="8_w08pn"]
[ext_resource type="PackedScene" uid="uid://clllwsuil2nv1" path="res://Scenes/gamma.tscn" id="9_innw7"]
[ext_resource type="PackedScene" uid="uid://d5n8vtwu4psq" path="res://Scenes/delta.tscn" id="10_nsrxl"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="11_v38xl"]
[ext_resource type="FontFile" uid="uid://bjkitu7plpg15" path="res://Assets/AldotheApache.ttf" id="12_7c7v3"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_r3abf"]
vertices = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_cb3u6"]
vertices = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_gq3iq"]
vertices = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)])

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nd2jf"]
texture = ExtResource("2_eo0mo")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_r3abf")
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_cb3u6")
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_gq3iq")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nousr"]
texture = ExtResource("3_p3w3u")
texture_region_size = Vector2i(8, 8)
0:0/size_in_atlas = Vector2i(8, 6)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32.0887, -21.7255, 32.0887, -22.2249, 31.5893, 21.9752, -31.839, 21.4757)
8:0/size_in_atlas = Vector2i(6, 6)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.1667, -21.3333, 11.5, -21.6667, 22.1667, -8.66666, 22.5, 10.3333, 9.5, 22.3333, -9.5, 22.3333, -22.1667, 12, -21.8333, -7)
8:6/size_in_atlas = Vector2i(6, 6)
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.1667, -21.3333, 11.5, -21.6667, 22.1667, -8.66666, 22.5, 10.3333, 9.5, 22.3333, -9.5, 22.3333, -22.1667, 12, -21.8333, -7)
8:12/size_in_atlas = Vector2i(6, 6)
8:12/0 = 0
8:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:12/0/physics_layer_0/angular_velocity = 0.0
8:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.1667, -21.3333, 11.5, -21.6667, 22.1667, -8.66666, 22.5, 10.3333, 9.5, 22.3333, -9.5, 22.3333, -22.1667, 12, -21.8333, -7)
0:6/size_in_atlas = Vector2i(8, 6)
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32.0887, -21.7255, 32.0887, -22.2249, 31.5893, 21.9752, -31.839, 21.4757)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yjkkw"]
texture = ExtResource("4_nkb85")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(64, 64, 64, -64, -64, -64, -64, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jehpk"]
texture = ExtResource("2_eo0mo")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_akcdp"]
texture = ExtResource("5_4mihm")
texture_region_size = Vector2i(128, 128)
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.0685, 64, -16.0685, -15.8919, 64, -16.2451, 64, 15.5388, 17.128, 15.8919, 16.0685, 64)
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -16.1068, -0.249718, 16.1068, -64, 16.6062, -64, -16.3565)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -16.0685, 15.8919, -16.0685, 16.2451, 64, -15.5388, 64, -15.8919, 17.128, -64, 16.0685)
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(15.7322, -64, 15.7322, 64, -15.4825, 64, -15.7322, -64)
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.1068, 0, 16.1068, 0.249718, 16.6062, 64, -16.3565, 64)
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(64, 16.0685, -15.8919, 16.0685, -16.2451, -64, 15.5388, -64, 15.8919, -17.128, 64, -16.0685)
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -15.7322, 64, -15.7322, 64, 15.4825, -64, 15.7322)
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(16.0685, -64, 16.0685, 15.8919, -64, 16.2451, -64, -15.5388, -17.128, -15.8919, -16.0685, -64)
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(16.1068, 0, -16.1068, -0.249718, -16.6062, -64, 16.3565, -64)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 16.1068, 0.249718, -16.1068, 64, -16.6062, 64, 16.3565)

[sub_resource type="TileSet" id="TileSet_eb5pk"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_nd2jf")
sources/1 = SubResource("TileSetAtlasSource_nousr")
sources/2 = SubResource("TileSetAtlasSource_yjkkw")
sources/3 = SubResource("TileSetAtlasSource_jehpk")
sources/4 = SubResource("TileSetAtlasSource_akcdp")

[node name="World" type="Node2D"]
scale = Vector2(0.85, 0.85)
script = ExtResource("1_43fiv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 1747.0
offset_top = 29.0
offset_right = 1907.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("12_7c7v3")
theme_override_font_sizes/font_size = 50
text = "adfaw"

[node name="corner0" type="Marker2D" parent="."]
position = Vector2(1807.06, 37.647)

[node name="corner1" type="Marker2D" parent="."]
position = Vector2(1807.06, 978.823)

[node name="corner2" type="Marker2D" parent="."]
position = Vector2(-38.8236, 995.294)

[node name="corner3" type="Marker2D" parent="."]
position = Vector2(-34.1177, 54.1176)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(240, 67)
tile_set = SubResource("TileSet_eb5pk")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(-3, 0, 0, 65533, 0, 0, -2, 0, 0, 65534, 0, 0, 196605, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 524285, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, -1, 0, 0, 65535, 0, 0, 262143, 0, 0, 327679, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, -65535, 0, 0, 1, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, -65534, 0, 0, 2, 0, 0, 131074, 0, 0, 196610, 0, 0, 327682, 0, 0, 458754, 0, 0, -65533, 0, 0, 3, 0, 0, 131075, 0, 0, 196611, 0, 0, 327683, 0, 0, 458755, 0, 0, -65532, 0, 0, 4, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 458758, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 458759, 0, 0, 8, 0, 0, 65544, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 393226, 0, 0, 458762, 0, 0, -65525, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 393215, 3, 0, 458751, 3, 0, 524287, 3, 0, 393218, 3, 0, 393219, 3, 0, 262146, 3, 0, 262147, 3, 0, 262150, 3, 0, 327686, 3, 0, 393222, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 196618, 3, 0, 262154, 3, 0, 327690, 3, 0, 131069, 3, 0, 131071, 3, 0, 196607, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, -65528, 3, 0, 11, 3, 0)
layer_1/name = "obstacles"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(458748, 2, 0, -65540, 2, 0, -4, 2, 0, 65532, 2, 0, 131068, 2, 0, 196604, 2, 0, 262140, 2, 0, 327676, 2, 0, 393212, 2, 0, 524284, 2, 0, 589820, 2, 0, 589821, 2, 0, 589822, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 458765, 2, 0, 393229, 2, 0, 327693, 2, 0, 262157, 2, 0, 196621, 2, 0, 131085, 2, 0, 65549, 2, 0, 13, 2, 0, -65523, 2, 0, -131059, 2, 0, -65539, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -131062, 2, 0, -131061, 2, 0, -131060, 2, 0, 131069, 393220, 3, 65537, 393220, 2, 65540, 393220, 3, 65538, 393220, 5, 65539, 393220, 5, 262147, 393220, 3, 262146, 393220, 2, 393215, 458756, 4, 393218, 393220, 2, 393219, 393220, 3, 458751, 327684, 4, 524287, 327684, 4, -65528, 524292, 4, 131082, 458756, 3, 131080, 393220, 2, 131081, 393220, 5, 196618, 327684, 4, 262154, 327684, 4, 327690, 524292, 4, 458758, 327684, 4, 393222, 327684, 4, 327686, 327684, 4, 262150, 458756, 4, 196607, 524292, 4, 131071, 458756, 4, 11, 458756, 4)

[node name="Player" parent="." instance=ExtResource("6_r35vq")]
position = Vector2(832, 744)
up_direction = Vector2(-1, 0)

[node name="Alpha" parent="." node_paths=PackedStringArray("player", "target") instance=ExtResource("7_1ieat")]
position = Vector2(360, 285)
player = NodePath("../Player")
target = NodePath("../Player/AlphaTarget")

[node name="Beta" parent="." node_paths=PackedStringArray("player", "target") instance=ExtResource("8_w08pn")]
position = Vector2(373, 765)
player = NodePath("../Player")
target = NodePath("../Player/BetaTarget")

[node name="Gamma" parent="." node_paths=PackedStringArray("player", "target") instance=ExtResource("9_innw7")]
position = Vector2(1344, 736)
player = NodePath("../Player")
target = NodePath("../Alpha/GammaFollow")

[node name="Delta" parent="." node_paths=PackedStringArray("player") instance=ExtResource("10_nsrxl")]
position = Vector2(1407, 268)
player = NodePath("../Player")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(871, 508)
script = ExtResource("11_v38xl")

[node name="AggTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="timeout" from="AggTimer" to="." method="_on_agg_timer_timeout"]

[editable path="Player"]
[editable path="Alpha"]
